# ai-cis-platinum

./: .gitignore  INDEX.md  README.md
.docs/resume/: pause_2026-05-14T09-53-09Z.md
diagrams/: README.md  c4_containers.mmd  c4_context.mmd  data_flow.mmd  decision_register.mmd  dmta_campaign_example.mmd  dual_track_architecture.mmd  dual_track_gantt.mmd  pillar1_ai.mmd  pillar2_multimetal.mmd  pillar3_dmta.mmd  pillar4_mlops.mmd  resource_allocation_phase2_pie.mmd  resource_allocation_phase3_pie.mmd  resource_allocation_pie.mmd  track_convergence.mmd
docs/: 00_executive_summary.md  01_problem_and_context.md  02_high_level_architecture.md  03_pillar1_ai_modernization.md  03a_validation_specification.md  04_pillar2_multimetal.md  05_pillar3_agentic_dmta.md  06_pillar4_mlops_backend.md  06a_slo_register.md  07_data_architecture.md  08_implementation_roadmap.md  09_risks_and_mitigations.md  10_value_proposition.md  11_references.md  12_dual_track_milestones.md  api_governance.md
repo/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
repo/adrs/: ADR-001-microservices.md  ADR-002-postgresql-rdkit-cartridge.md  ADR-003-mkano-backbone-strategy.md  ADR-004-langgraph-orchestrator.md  ADR-005-knowledge-graph-store.md  ADR-006-mlflow-model-registry.md  ADR-007-mcp-tool-surface.md  ADR-008-inference-serving-stack.md  ADR-009-fine-tuning-methodology.md  ADR-010-retrieval-architecture.md  ADR-011-skill-curation.md  ADR-012-autonomy-level.md  ADR-013-sandbox-runtime.md
repo/services/agentic-orchestrator/: Dockerfile  README.md  pyproject.toml
repo/services/agentic-orchestrator/src/: main.py
repo/services/agentic-orchestrator/src/graph/: state.py
repo/services/agentic-orchestrator/src/graph/tools/: base.py
repo/services/chemoinformatic-core/: Dockerfile  INTERFACE.md  README.md  pyproject.toml
repo/services/chemoinformatic-core/src/: __init__.py  main.py  schemas.py
repo/services/chemoinformatic-core/src/api/: drug_likeness.py  generate.py  health.py  sanitize.py
repo/services/chemoinformatic-core/src/strategies/: __init__.py  base.py  gold.py  platinum.py
repo/services/inference-api/: README.md  pyproject.toml
repo/services/inference-api/src/: main.py
repo/services/inference-api/src/api/: predict.py
repo/services/ingestion/: Dockerfile  README.md  pyproject.toml
repo/services/ingestion/src/: main.py
repo/services/model-training/: Dockerfile  README.md  pyproject.toml
repo/services/model-training/src/: train.py
repo/services/web-ui/: Dockerfile  README.md  package.json
slides/: marp-theme.css  presentation.md
