[project]
name = "mbfinder-v2"
version = "0.1.0-skeleton"
description = "MB Finder v2 — A multi-metal AI-driven drug discovery platform (skeleton)"
authors = [{ name = "MB Finder v2 platform team" }]
license = { text = "CC-BY-4.0" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.6",
    "rdkit>=2024.3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "structlog>=24.1",
    "psycopg[binary]>=3.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "pytorch-lightning>=2.2",
    "torch-geometric>=2.5",
    "mlflow>=2.10",
    "dvc[s3]>=3.45",
    "hydra-core>=1.3",
    "optuna>=3.5",
]
agentic = [
    "langgraph>=0.0.30",
    "langchain>=0.1",
    "anthropic>=0.25",
    "openai>=1.20",
]
omics = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.6",
]

[tool.uv.workspace]
members = ["services/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "RET", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
