[project]
name = "mbfinder-agentic-orchestrator"
version = "0.1.0-skeleton"
description = "LangGraph-based DMTA orchestrator for MB Finder v2"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "langgraph>=0.0.30",
    "langchain>=0.1",
    "anthropic>=0.25",
    "openai>=1.20",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "structlog>=24.1",
]
