[project]
name = "mbfinder-inference-api"
version = "0.1.0-skeleton"
description = "Prediction serving API for MB Finder v2"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "redis>=5.0",
    "mlflow>=2.10",
    "torch>=2.2",
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
    "prometheus-client>=0.20",
]
