[project]
name = "mbfinder-model-training"
version = "0.1.0-skeleton"
description = "Model training jobs for MB Finder v2 (MKANO+, ChemFM-LoRA, diffusion)"
requires-python = ">=3.12"

dependencies = [
    "torch>=2.2",
    "pytorch-lightning>=2.2",
    "torch-geometric>=2.5",
    "mlflow>=2.10",
    "hydra-core>=1.3",
    "dvc[s3]>=3.45",
    "optuna>=3.5",
    "pydantic>=2.6",
    "structlog>=24.1",
    "rdkit>=2024.3.1",
]
